--- a/opdracht1.html
+++ b/opdracht1.html
@@ -12,7 +12,9 @@
             
             // Jou instructies volgen hier
             robotArm.moveRight();
+            robotArm.grab();
             robotArm.moveLeft();
+            robotArm.drop();
             
             // De door jou opgegeven instructies uitvoeren
             robotArm.run();
