--- a/voorbeeld.html
+++ b/voorbeeld.html
@@ -9,7 +9,7 @@
             
             // Het level inladen
             robotArm.loadLevel("exercise 1");
-            
+            robotArm.speed = 1000;
             // Jou instructies volgen hier
             robotArm.moveRight();
             robotArm.moveLeft();
